--- a/file.html
+++ b/file.html
@@ -1,72 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vinay's Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <h1>VINAY</h1>
-    </header>
+  <header>
+    <h1>Hi, I'm Vinay</h1>
+    <p>Final Year AIML Student | Web Developer | ML Enthusiast</p>
+  </header>
 
-    <!-- About Section -->
-    <section id="My name is vinay,and I'm thrilled to have the opportunity to introduce myself to you.I am a passionate and dedicated student eager to embark on this journey of learning and growth together.">
-        <h2>About Me</h2>
-        <h1>Vinay</h1>
-        <p>My name is vinay,and I'm thrilled to have the opportunity to introduce myself to you.I am a passionate and dedicated student eager to embark on this journey of learning and growth together.</p>
-    </section>
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-    <!-- Skills Section -->
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Responsive Design</li>
-            <li>UI/UX Design</li>
-            <li>Git & version control</li>
-        </ul>
-    </section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am a passionate AI/ML student who loves solving real-world problems using technology. Currently pursuing B.Tech in CSE (AIML).</p>
+  </section>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <p>PROJECT 1: E-commerce website</p>
-            <p>An e-commerce platform developed with React and Node.js</p>
-            <img src="project1.jpg" alt="Project 1" width="200">
-        </div>
-        <div class="project">
-            <p>PROJECT 2: Portfolio website</p>
-            <p>A personal portfolio website showcasing my skills and projects</p>
-            <img src="project2.jpg" alt="Project 2" width="200">
-        </div>
-    </section>
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li>🔹 Fake News Detection using NLP</li>
+      <li>🔹 Credit Card Fraud Detection with ML</li>
+      <li>🔹 Handwritten Digit Recognition (MNIST)</li>
+    </ul>
+  </section>
 
-    <!-- Resume Section -->
-    <section id="resume">
-        <h2>Resume</h2>
-        <p>Download my resume to learn more about my experience,qualifications and skills.</p>
-        <a href="resume.pdf" download>Download Resume</a>
-    </section>
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills">
+      <span>HTML</span>
+      <span>CSS</span>
+      <span>JavaScript</span>
+      <span>Python</span>
+      <span>Machine Learning</span>
+      <span>Git & GitHub</span>
+    </div>
+  </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <P>Feel free to reach out to me for collaborations or opportunities</P>
-        <p>Email: avinay6300@gmail.com</p>
-        <p>Phone: 6300702486</p>
-    </section>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:vinay@example.com">vinay@example.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/vinay">linkedin.com/in/vinay</a></p>
+  </section>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Vinay. All rights reserved.</p>
-        <p><a href="https://github.com/vinay2222222">connect with me: GitHub</a></p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Vinay | CodSoft Internship Project</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
